@@ -33,9 +33,10 @@ function addBookmark(){
 	var url=document.getElementById("url").value;
 	var title=document.getElementById("title").value;
 	var description=document.getElementById("description").value;
+	var path=document.getElementById("path").value;
 	var tags=document.getElementById("tags").value;
 	var isPublic=document.getElementById("ispublic").getAttribute("selected");
-	var public="private"
+	var public="private";
 	var stringBundle = document.getElementById("yacybar-string-bundle");
 	if(isPublic){
 		public="public";
@@ -53,7 +54,7 @@ function addBookmark(){
 	//TODO: Do not Change it, till a stable Release with the Backend!
 	//req.open('get', getBaseURL()+"/xml/bookmarks/posts/add_p.xml?");
 	rqurl=getBaseURL()+"/Bookmarks.html?url="+encodeURIComponent(url)+"&title="+encodeURIComponent(title)
-	+"&description="+encodeURIComponent(description)+"&tags="+encodeURIComponent(tags)+"&public="+public+"&add=true";
+	+"&description="+encodeURIComponent(description)+"&path="+encodeURIComponent(path)+"&tags="+encodeURIComponent(tags)+"&public="+public+"&add=true";
 	req=new XMLHttpRequest();
 	req.open('GET', rqurl, false, userPwd["user"], userPwd["pwd"]);
 	req.send(null);
