@@ -17,6 +17,7 @@
 <!ENTITY addBM.label.url "URL">
 <!ENTITY addBM.label.title "Title">
 <!ENTITY addBM.label.description "Description">
+<!ENTITY addBM.label.path "Path (/folder/subfolder)">
 <!ENTITY addBM.label.tags "Tags(separated by comma)">
 <!ENTITY addBM.label.public "Public">
 <!ENTITY addBM.menuitem.yes "yes">
