@@ -1,3 +1,4 @@
++ added folder for add bookmark (daburna)
 + added mediasearch (daburna)
 + added property-files for translating .js files (daburna)
 + added UTF-8 for all xml files (daburna)
